Revert "Fixes truncation of username when not needed (#12030) (#12059)"
This reverts commit ed4a88cdd2e89d8ffefaf8fa3afe1633abaf6304.

--- a/sass/components/_suggestion-list.scss
+++ b/sass/components/_suggestion-list.scss
@@ -205,7 +205,7 @@
 
         .suggestion-list__main {
             overflow: hidden;
-            width: 100%;
+            max-width: 89%;
             color: rgba(var(--center-channel-color-rgb), 1);
             text-overflow: ellipsis;
             white-space: nowrap;
